--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,10 +37,10 @@ jobs:
         if: runner.os == 'macOS'
         shell: bash
         run: |
-          rm -f /usr/local/bin/2to3 || :
-          rm -f /usr/local/bin/idle3 || :
-          rm -f /usr/local/bin/pydoc3 || :
-          rm -f /usr/local/bin/python3 || :
+          rm -f /usr/local/bin/2to3* || :
+          rm -f /usr/local/bin/idle3* || :
+          rm -f /usr/local/bin/pydoc3* || :
+          rm -f /usr/local/bin/python3* || :
           rm -f /usr/local/bin/python3-config || :
           brew update
           brew install apache-arrow
