:zap: SubFrames#aggregate method

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -182,6 +182,7 @@ Metrics/PerceivedComplexity:
     'replace', # 13
     'drop', # 12
     'initialize', # 12
+    'aggregate', # 12
     '[]', # 11
     'filters', # 11
     'html_table', # 11
