--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -86,6 +86,7 @@ Metrics/AbcSize:
     'drop', # 31.42
     '[]', # 33.76
     'split', # 37.35
+    'aggregate', # 38.13
   ]
 
 # Max: 25
@@ -128,6 +129,7 @@ Metrics/CyclomaticComplexity:
     'remove', # 14
     '[]', # 13
     'drop', # 13
+    'aggregate', # 13
   ]
 
 # Max: 10
