--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,20 +1,21 @@
 version: '3'
 
 services:
-  datascience-ruby:
+  minimal-redamber:
     build:
       context: .
       dockerfile: Dockerfile
-    image: red_amber-notebook
-    container_name: red_amber-notebook
+    image: red_amber-minimal-notebook
+    container_name: red_amber-minimal-notebook
     user: root
     environment:
       - GRANT_SUDO=yes
-      - NB_USER=${NB_USER}
+      - NB_USER=$NB_USER
       - CHOWN_HOME=yes
-    working_dir: /home/${NB_USER}/work
+      - TZ=$TZ
+    working_dir: /home/$NB_USER/work
     ports:
       - '8888:8888'
     volumes:
-      - ./notebook:/home/${NB_USER}/work
+      - ./notebook:/home/$NB_USER/work
     command: start-notebook.sh --NotebookApp.token=$TOKEN
