--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -87,7 +87,7 @@ Metrics/AbcSize:
     '[]', # 33.76
     'split', # 37.35
     'aggregate', # 38.13
-    'filter_table', # 31.11
+    'filters', # 33.91
   ]
 
 # Max: 25
