--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -144,6 +144,7 @@ Metrics/MethodLength:
     'format_table', # 53
     'slice_by', # 38
     'assign_update', # 35
+    'summarize', # 35
     'drop', # 32
     'aggregate', # 31
   ]
