--- a/.github/workflows/code_climate.yml
+++ b/.github/workflows/code_climate.yml
@@ -19,9 +19,9 @@ jobs:
           wget https://apache.jfrog.io/artifactory/arrow/$(lsb_release --id --short | tr 'A-Z' 'a-z')/apache-arrow-apt-source-latest-$(lsb_release --codename --short).deb
           sudo apt install -y -V ./apache-arrow-apt-source-latest-$(lsb_release --codename --short).deb
           sudo apt update
-          sudo apt install -y -V libarrow-dev
-          # sudo apt install -y -V gir1.2-arrow-1.0
-          sudo apt install -y -V libarrow-glib-dev
+          sudo apt install -y -V libarrow-dev=11.0.0-1
+          sudo apt install -y -V gir1.2-arrow-1.0=11.0.0-1
+          sudo apt install -y -V libarrow-glib-dev=11.0.0-1
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
