:butterfly: Fix timestamp test to set TZ locally

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,7 @@ jobs:
           wget https://apache.jfrog.io/artifactory/arrow/$(lsb_release --id --short | tr 'A-Z' 'a-z')/apache-arrow-apt-source-latest-$(lsb_release --codename --short).deb
           sudo apt install -y -V ./apache-arrow-apt-source-latest-$(lsb_release --codename --short).deb
           sudo apt update
-          sudo apt install -y -V libarrow-dev
-          sudo apt install -y -V gir1.2-arrow-1.0
-          sudo apt install -y -V libarrow-glib-dev
+          sudo apt install -y -V libarrow-dev libarrow-glib-dev gobject-introspection
 
       - name: Prepare Apache Arrow on macOS
         if: runner.os == 'macOS'
@@ -55,8 +53,6 @@ jobs:
           cache-version: 1 # ignore contents of the cache and get and build all the gems anew
 
       - name: Run test
-        env:
-          TZ: Asia/Tokyo # set TZ to ensure the test using timestamp
         run: bundle exec rake test
 
       # - name: Check test coverage
