:recycle: Move example to bin

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -52,7 +52,7 @@ Lint/BinaryOperatorWithIdenticalOperands:
 
 Lint/Debugger:
   Exclude:
-    - 'docker/example'
+    - 'bin/example'
 
 # Need for test with empty block
 # Offense count: 1
@@ -225,7 +225,7 @@ Naming/PredicateName:
 Rubycw/Rubycw:
   Exclude:
     - 'test/**/*'
-    - 'docker/example'
+    - 'bin/example'
 
 # Offense count: 16
 # This cop supports safe autocorrection (--autocorrect).
@@ -242,7 +242,7 @@ Style/SlicingWithRange:
 
 Style/MixinUsage:
   Exclude:
-    - 'docker/example'
+    - 'bin/example'
 
 # Necessary to Vector < 0 element-wise comparison
 # Offense count: 5
