:butterfly: Change lifecycle script from postCreate to onCreate

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,5 +18,5 @@
     "containerEnv": {
         "TZ": "${localEnv:TZ:UTC}"
     },
-    "postCreateCommand": ".devcontainer/postCreateCommand.sh"
+    "onCreateCommand": ".devcontainer/postCreateCommand.sh"
 }
