--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,29 @@
 {
-    "name": "RedAmber Dev Container",
+    "name": "RedAmber",
     "image": "mcr.microsoft.com/devcontainers/base:jammy",
     "features": {
+        "ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {
+            "packages": [
+                // To build Ruby
+                "autoconf",
+                "bison",
+                "rustc",
+                "libssl-dev",
+                "libyaml-dev",
+                "libreadline6-dev",
+                "zlib1g-dev",
+                "libgmp-dev",
+                "libncurses5-dev",
+                "libffi-dev",
+                "libgdbm6",
+                "libgdbm-dev",
+                "libdb-dev",
+                "uuid-dev",
+                // To install IRuby
+                "libczmq-dev",
+                "libzmq3-dev"
+            ]
+        },
         "ghcr.io/devcontainers/features/python:1": {
             "installTools": true,
             "installJupyterlab": true,
