--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 # x86-64/Ubuntu-22.04/python-3.11.7/lab-4.0.11/notebook-7.0.7/2024-01-29
 ARG BASE_IMAGE_TAG=3692e3a84cd6
 
-FROM jupyter/minimal-notebook:$BASE_IMAGE_TAG
+FROM quay.io/jupyter/minimal-notebook:$BASE_IMAGE_TAG
 
 USER root
 
