:butterfly: Move to volume from COPY instruction
Since e04839b, example script is moved to bin directory. bin directory
is not accessible in the container. Because compose.yml's context is `.`
(`.` means docker directory).

--- a/docker/compose.yml
+++ b/docker/compose.yml
@@ -16,4 +16,5 @@ services:
       - '8888:8888'
     volumes:
       - ../doc/notebook:/home/$NB_USER/work
+      - ../bin/example:/home/$NB_USER/example
     command: start-notebook.sh --NotebookApp.token=$TOKEN
